--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trekningsapplikasjon</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/stylesResponsive.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,600;1,600&display=swap" rel="stylesheet">
@@ -14,6 +15,8 @@
     <div id="app"></div>
     <script src="js/model.js"></script>
     <script src="js/editHappeningController.js"></script>
+    <script src="js/happeningsAdminView.js"></script>
+    <script src="js/happeningsAdminController.js"></script>
     <script src="js/editHappeningView.js"></script>
     <script src="js/editUserController.js"></script>
     <script src="js/editUserView.js"></script>
@@ -23,11 +26,13 @@
     <script src="js/deleteUserView.js"></script>
     <script src="js/happeningsController.js"></script>
     <script src="js/happeningsView.js"></script>
-    <script src="js/homePageView.js"></script>
-    <script src="js/homePageController.js"></script>
-    <script src="js/resetHappeningsController.js"></script>
-    <script src="js/resetHappeningsView.js"></script>
+    <script src="js/adminPageView.js"></script>
+    <script src="js/adminPageController.js"></script>
+    <script src="js/deleteCommentController.js"></script>
+    <script src="js/deleteCommentView.js"></script>
     <script src="js/common.js"></script>
+    <script src="js/loginView.js"></script>
+    <script src="js/loginController.js"></script>
     <script src="js/script.js"></script>
 
 </body>
