--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trekningsapplikasjon</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/stylesResponsive.css">
+    <link rel="stylesheet" href="css/stylesResponsive600px.css">
+    <link rel="stylesheet" href="css/stylesResponsive1000px.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,600;1,600&display=swap" rel="stylesheet">
@@ -14,6 +15,7 @@
 <body>
     <div id="app"></div>
     <script src="js/model.js"></script>
+    <!-- <script src="js/modelEmpty.js"></script> -->
     <script src="js/editHappeningController.js"></script>
     <script src="js/happeningsAdminView.js"></script>
     <script src="js/happeningsAdminController.js"></script>
